--- a/sass/theme/dark.scss
+++ b/sass/theme/dark.scss
@@ -22,7 +22,7 @@ $text-2: lighten($bg-0, 40%);
   --primary-color: #ef5350;
   --hover-color: white;
 
-  .social > img {
+  .social > img, .search-button > img {
     filter: invert(1);
   }
 }
